# medieval_game

./: .gitignore  CMakeLists.txt  README  main.c
source/: camera.c  camera.h  error.h  game.c  game.h  macros.h  main.c  main.h  player.c  player.h  renderer.c  renderer.h  terrain.c  terrain.h
